Fix "Import dictionaries from URLs" textarea not showing newlines on firefox (#1574)

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2414,7 +2414,7 @@ input[type=number].dictionary-priority {
 #dictionary-import-url-text {
     width: 100%;
     height: 4em;
-    white-space: nowrap;
+    text-wrap: nowrap;
     resize: none;
 }
 
